educational-platform-v1/infra/k8s/course-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: educationalplatform/ds-course:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: course-srv
spec:
  selector:
    app: course
  type: ClusterIP
  ports:
    - name: course
      protocol: TCP
      port: 5003
      targetPort: 5003
